# dimi

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
dimi/: _storage.py  _utils.py  dependency.py  di.py  scopes.py
dimi/_utils/: __init__.py  py314.py  utils.py
docs/: di_api.md  faq.md  index.md  use_cases.md  web_usage.md
requirements/: dev.txt
tests/: conftest.py  test_di.py  test_use_cases.py
tinydi/: dependency.py  di.py  integrations.py  scopes.py
